# puppet-engine

./: .coverage  .env.example  .gitignore  CHANGELOG.md  LICENSE  PERSONALITY_DESIGN.md  PM2-README.md  README-solana-trading.md  README.md  coby-context.json  ecosystem.config.js  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_minimal_hang.py  test_sqlite_migration.py
.github/workflows/: baseline-tests.yml  ci.yml
config/agents/: claudia-agent.json  coby-agent.json
config/agents_backup/: example-agent.json  example_agent_web_scraping.json  news-bot.json  test-agent.json  test-grok-agent.json
data/: coby-token-state.json  processed_tweets.json
docs/: AGENT_CONFIGURATION.md  AGENT_CREATION.md  API_REFERENCE.md  ARCHITECTURE.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  EXAMPLES.md  LLM_PROVIDERS.md  PYTHON_MIGRATION_PLAN.md  PYTHON_MIGRATION_PLAN_FINAL.md  PYTHON_MIGRATION_PLAN_V2.md  README-pump-fun-token.md  README-solana-trading.md  README.md  TESTING.md  THIRD_PARTY_LICENSES.md  TROUBLESHOOTING.md  api_documentation.md  code_audit.md  python_port_plan.md  rotating-prompts.md  token-launch-usage.md
examples/: trading-agent-demo.js
marionette/: config.py  main.py  types.py
marionette/agents/: agent.py  (+2 more)
puppet-engine-py/: .gitignore  MIGRATION_STATUS.md  Makefile  README.md  SQLITE_MIGRATION_REPORT.md  deployment_test_output.txt  pytest.ini  requirements.txt  test_hang_debug.py  test_simple.py  test_sqlite_vector_store.py
src/: index.js  main.py
tests/: conftest.py
v1/: package-lock.json
(+137 files in other folders)
