[tool.poetry]
name = "puppetengine"
version = "0.1.0"
description = "Python port of Puppet Engine"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 