[tool.poetry]
name = "puppetengine"
version = "0.1.0"
description = "Python port of Puppet Engine"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
fastapi = "0.110.0"
starlette = "0.36.3"
httpx = "0.27.0"
tenacity = "^9.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 